--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,10 +8,10 @@ html,
 body {
   height: 100%;
   text-align: center;
-  background-color: #191b22;
+  /* background-color: #3100D7; */
 }
 body {
-  color: #fff;
+  color: #000;
   margin: 100px;
 }
 .hide {
@@ -147,7 +147,7 @@ textarea {
 .post {
   margin: 15px 0px;
   padding: 20px;
-  background-color: #2e2e2e;
+  background-color: #E5E5E5;
   border-radius: 6px;
   min-height: 90px;
   text-align: left;
@@ -155,6 +155,6 @@ textarea {
   position: absolute; */
 }
 
-audio {
+.myAudio {
   float:  right;
 }
