--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,8 +1,10 @@
 /* Globals */
-a,
+a {
+  color: #E5E5E5;
+}
 a:focus,
 a:hover {
-  color: #fff;
+
 }
 html,
 body {
@@ -162,4 +164,38 @@ textarea {
 
 .myAudio {
   float:  right;
+}
+
+/* dropdown delete menu */
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    /* min-width: 100px; */
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    cursor: pointer;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
 }
