--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -204,3 +204,30 @@ textarea {
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+
+
+/* The navigation bar */
+.navbar {
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+}
+
+/* Links inside the navbar */
+.navbar a {
+    float: left;
+    display: block;
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+    border-radius: 10px;
+    background: #ddd;
+    color: black;
+}
