--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -244,7 +244,7 @@ textarea {
   width: 13px;
   height: 13px;
   border-radius: 50%;
-  background: rgb(241,158,85);
+  background: #EC5598;
   animation: lds-grid 1.2s linear infinite;
 }
 .lds-grid div:nth-child(1) {
@@ -314,7 +314,7 @@ textarea {
   width: 11px;
   height: 11px;
   border-radius: 50%;
-  background: rgb(236,85,152);
+  background: #EC5598;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds-ellipsis div:nth-child(1) {
@@ -355,5 +355,30 @@ textarea {
   }
   100% {
     transform: translate(19px, 0);
+  }
+}
+
+.lds-circle {
+  display: inline-block;
+  width: 51px;
+  height: 51px;
+  margin: 6px;
+  border-radius: 50%;
+  background: #EC5598;
+  animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+@keyframes lds-circle {
+  0%, 100% {
+    animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+  }
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(1800deg);
+    animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+  }
+  100% {
+    transform: rotateY(3600deg);
   }
 }
