--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -211,18 +211,24 @@ textarea {
 .navbar {
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
+    width: 80%; /* Full width */
 }
 
 /* Links inside the navbar */
 .navbar a {
-    float: left;
+
     display: block;
     color: #000000;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+}
 
+.left a{
+    float: left;
+}
+.right a{
+    float: right;
 }
 
 /* Change background on mouse-over */
@@ -230,6 +236,46 @@ textarea {
     border-radius: 10px;
     background: #ddd;
     color: black;
+}
+
+.header {
+  min-height: 100px;
+}
+.header h1 {
+  text-align: left;
+}
+
+.input-wrapper {
+  width: 100%;
+  height: 100px;
+}
+
+.input-wrapper::after {
+  font-size: 1.5rem;
+  line-height: 0;
+  height: 0;
+  max-width: 100%;
+  border-bottom: 3px solid #000;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  overflow: hidden;
+  user-select: none;
+  color: transparent;
+}
+
+input {
+  color: #000;
+  border: none;
+  padding: 0;
+  border-radius: 0;
+  outline: none;
+  min-width: 100%;
+  font-size: 2.5rem;
+  line-height: 3em;
+  border-bottom: 2px solid #000;
+  background-color: transparent;
 }
 
 /* upload spinner */
