--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -147,6 +147,13 @@ textarea {
   height: 70px;
   border-radius: 6px;
 }
+
+.input-tags {
+  width: 100%;
+  height: 40px;
+  border-radius: 6px;
+}
+
 .new-postIndex {
   text-align: right;
 }
