--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -137,8 +137,7 @@ body {
 }
 
 /* Input */
-input,
-textarea {
+.upload-ting {
   color: #000;
   padding: 10px;
 }
@@ -183,6 +182,11 @@ textarea {
 .dropdown {
     position: relative;
     display: inline-block;
+
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -205,25 +209,29 @@ textarea {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+  border-radius: 10px;
+  background: #ddd;
+  color: black;
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-
-
 /* The navigation bar */
 .navbar {
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 80%; /* Full width */
+    z-index: 3;
+    background-color: #fff;
+    border-bottom: 2px solid #000;
 }
 
 /* Links inside the navbar */
 .navbar a {
-
     display: block;
     color: #000000;
     text-align: center;
@@ -236,6 +244,9 @@ textarea {
 }
 .right a{
     float: right;
+}
+.right div{
+  float: right;
 }
 
 /* Change background on mouse-over */
@@ -272,7 +283,7 @@ textarea {
   color: transparent;
 }
 
-input {
+.input-big {
   color: #000;
   border: none;
   padding: 0;
@@ -285,7 +296,16 @@ input {
   background-color: transparent;
 }
 
-/* upload spinner */
+.save-button{
+  color: #000;
+  border: none;
+  padding: 0;
+  outline: none;
+  font-size: 2.5rem;
+  background-color: transparent;
+}
+
+/* upload grid */
 .lds-grid {
   display: inline-block;
   position: relative;
@@ -354,7 +374,7 @@ input {
   }
 }
 
-/* loading thing 2 */
+/* audio loading */
 .lds-ellipsis {
   display: inline-block;
   position: relative;
@@ -411,6 +431,8 @@ input {
   }
 }
 
+
+/*feed load */
 .lds-circle {
   display: inline-block;
   width: 51px;
