--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -242,6 +242,9 @@ body {
 .left a{
     float: left;
 }
+.left div{
+    float: left;
+}
 .right a{
     float: right;
 }
@@ -303,6 +306,42 @@ body {
   outline: none;
   font-size: 2.5rem;
   background-color: transparent;
+}
+
+/* new playlist pop up */
+#overlay {
+   display:none;    /* This make it initially hidden                                           */
+   position:fixed;  /* This makes it so it says in a fixed position even if they scroll around */
+   left:0px;        /* This positions the element to the left most position                    */
+   top:0px;         /* This positions the elment to the top most position                      */
+   width:100%;      /* This makes the element take up 100% of the parents width                */
+   height:100%;     /* This makes the element take up 100% of the parents height               */
+   background:#000; /* Give it a black background                                              */
+   opacity:0.5;     /* Change the opacity to 50% so that is see through.                       */
+   z-index:99999;   /* Change the z-index so it will be above everything else                  */
+}
+
+#popup {
+   display:none;
+   position:fixed;
+   left:50%;              /* left and top here position top left page                                        */
+   top:50%;               /* of the element to the center of the                                             */
+   width:500px;           /* Set the popup to have a specific width/height                                   */
+   /* height:170px; */
+   height: auto;
+   margin-top:-250px;      /* To get the popup to center correctly we need                                    */
+   margin-left:-250px;    /* To displace the the top/left margins by half of the width/height                */
+   background:#FFFFFF;    /* Background of white                                                             */
+   z-index:100000;        /* Set z-index to 1 more than that of the overlay so the popup is over the overlay */
+   padding: 15px;
+}
+
+.col-md-12 {
+  display: block;
+}
+
+.table-center {
+  margin: 0px auto;
 }
 
 /* upload grid */
