--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -260,11 +260,23 @@ hr {
     display: block;
 }
 
+/* footer thing with player */
+.footer {
+    height: 50px;
+    position: fixed;
+    bottom:0%;
+    width:80%;
+    z-index: 3;
+    background-color: #fff;
+    border-top: 2px solid #000;
+}
+
 /* The navigation bar */
 .navbar {
+    border-radius: 0;
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
-    width: 80%; /* Full width */
+    width: 80%;
     z-index: 3;
     background-color: #fff;
     border-bottom: 2px solid #000;
@@ -329,8 +341,8 @@ hr {
 .input-big {
   color: #000;
   border: none;
-  padding: 0;
-  border-radius: 0;
+  padding: 0px;
+  border-radius: 0px;
   outline: none;
   min-width: 100%;
   font-size: 2.5rem;
@@ -342,7 +354,7 @@ hr {
 .save-button{
   color: #000;
   border: none;
-  padding: 0;
+  padding: 0px;
   outline: none;
   font-size: 2.5rem;
   background-color: transparent;
