--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,11 +15,12 @@ a:hover {
   color: black !important;
 }
 .marginright {
-  margin-right: 12%;
+  margin-right: 2%;
 }
 .marginleft {
-  margin-left: 12%;
+  margin-left: 2%;
 }
+
 html,
 body {
   height: 100%;
@@ -72,6 +73,24 @@ hr {
 /* Dropzone */
 .dropzone {
   text-align: left;
+}
+
+/* scrub bar */
+#time-markers {
+  margin-top: 3px;
+}
+#scrub {
+  margin-top: 13px;
+  width: 60%;
+  background-color: #E5E5E5;
+  display: inline-block;
+}
+
+#scrubbar {
+  width: 0%;
+  height: 3px;
+  border-radius: 2px;
+  background-color: rgb(236,85,152);
 }
 
 /* Buttons */
@@ -268,7 +287,7 @@ hr {
 
 /* footer thing with player */
 .footer {
-    padding: 7px;
+    padding: 10px;
     height: 50px;
     position: fixed;
     bottom:0%;
