--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -136,6 +136,26 @@ hr {
   background-color: #1a6ec0;
 }
 
+/* discover icon */
+
+.discover-icon {
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.discover-icon:hover,
+.discover-icon:focus,
+.discover-icon:active {
+  color: #7F7F7F;
+}
+
 /* Avatar */
 .avatar {
   width: 100px;
