--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -12,6 +12,10 @@ body {
   color: #fff;
 }
 
+.queue-box {
+  background-color: #2E2E2E;
+}
+
 .post {
   /*dark mode */
   background-color: #2E2E2E;
