--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -174,17 +174,17 @@ hr {
 .site-wrapper {
   display: table;
   width: 100%;
-  height: 100vh;
-  min-height: 100%;
+  /* height: 100vh; */
+  /* min-height: 100%; */
 }
 .site-wrapper-inner {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   justify-content: center;
   margin-right: auto;
   margin-left: auto;
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
 }
 .panel-authed {
   padding: 0 0 0 0;
@@ -299,6 +299,7 @@ hr {
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
+    width: 100%;
     cursor: pointer;
     text-decoration: none;
     display: block;
@@ -306,7 +307,7 @@ hr {
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-  border-radius: 10px;
+  /* border-radius: 10px; */
   background: #ddd;
   color: black;
 }
@@ -329,28 +330,53 @@ hr {
 }
 
 /* queue */
-.queue {
+.queue-box {
+  background-color: white;
   z-index: 6;
   position: fixed;
-  right: 6%;
+  right: 4%;
   bottom: 10%;
   border: 1px solid #ddd;
   box-shadow:10px 10px 20px grey;
   height: 40%;
-  width: 20%;
-  overflow: scroll;
+  width: 25%;
+
   padding-bottom: 12px;
 }
 
+.queue {
+  overflow: scroll;
+  height: 95%;
+  width: 100%;
+  padding-left: 4px;
+}
 .queue div {
   display: block;
   text-align: left;
-  margin-left: -16px;
+}
+
+.queue-title {
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-bottom: 1px solid #D7D7D7;
+}
+
+.queue-control {
+  float: right;
+  margin-right: 16px;
+  border-radius: 10px;
+}
+
+.queue-control:hover,
+.queue-control:focus,
+.queue-control:active {
+  color: #7F7F7F;
 }
 
 .fa-times {
   float: right;
-  margin-right: 4px;
+  margin-top: 4px;
+  margin-right: 16px;
 }
 
 /* The navigation bar */
@@ -379,6 +405,7 @@ hr {
 .left div{
     float: left;
 }
+
 .right a{
     float: right;
 }
@@ -388,7 +415,7 @@ hr {
 
 /* Change background on mouse-over */
 .navbar a:hover {
-    border-radius: 10px;
+    /* border-radius: 10px; */
     background: #ddd;
     color: black;
 }
