--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,7 +26,6 @@ a:hover {
 
 html,
 body {
-  height: 100%;
   text-align: center;
 }
 body {
@@ -65,11 +64,6 @@ label {font-weight: 400 !important}
 
 hr {
   border-color: #BBBBBB;
-}
-
-/* Container */
-.container {
-  height: 100%;
 }
 
 /* Dropzone */
@@ -175,10 +169,9 @@ hr {
   display: table;
   width: 100%;
   /* height: 100vh; */
-  /* min-height: 100%; */
 }
 .site-wrapper-inner {
-  /* display: flex; */
+  display: flex;
   flex-direction: column;
   justify-content: center;
   margin-right: auto;
@@ -503,6 +496,10 @@ hr {
 
 .table-center {
   margin: 0px auto;
+}
+
+.up {
+  margin-top: -20px;
 }
 
 /* upload grid */
