--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -30,7 +30,9 @@ body {
 }
 body {
   color: #000;
-  margin: 100px;
+  /* margin: 100px; */
+  width: 100%;
+  height: 100%;
 }
 .hide {
   display: none;
@@ -166,6 +168,8 @@ hr {
 
 /* Scaffolding */
 .site-wrapper {
+  margin-top:100px;
+  margin-bottom: 100px;
   display: table;
   width: 100%;
   /* height: 100vh; */
@@ -312,11 +316,14 @@ hr {
 
 /* footer thing with player */
 .footer {
-    padding: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 5%;
+    padding-right: 5%;
     height: 50px;
     position: fixed;
     bottom:0%;
-    width:80%;
+    width:100%;
     z-index: 3;
     background-color: #fff;
     border-top: 2px solid #000;
@@ -374,10 +381,12 @@ hr {
 
 /* The navigation bar */
 .navbar {
+  padding-left: 10%;
+  padding-right: 10%;
     border-radius: 0;
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
-    width: 80%;
+    width: 100%;
     z-index: 3;
     background-color: #fff;
     border-bottom: 2px solid #000;
@@ -653,4 +662,90 @@ hr {
   100% {
     transform: rotateY(3600deg);
   }
+}
+
+/* splash */
+header.masthead {
+  position: relative;
+  width: 100%;
+  padding-top: 450px;
+  padding-bottom: 100px;
+  color: white;
+  background: url("../images/bg-pattern.png"), #7b4397;
+  background: url("../images/bg-pattern.png"), -webkit-gradient(linear, right top, left top, from(#7b4397), to(#dc2430));
+  background: url("../images/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+}
+
+header.masthead .header-content {
+  margin-top: 20%;
+  max-width: 500px;
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+header.masthead .header-content h1 {
+  font-size: 30px;
+}
+
+header.masthead .device-container {
+  max-width: 325px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+header.masthead .device-container .screen img {
+  border-radius: 3px;
+}
+
+@media (min-width: 992px) {
+  header.masthead {
+    height: 100vh;
+    min-height: 775px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  header.masthead .header-content {
+    margin-bottom: 0;
+    text-align: left;
+  }
+  header.masthead .header-content h1 {
+    font-size: 50px;
+  }
+  header.masthead .device-container {
+    max-width: 325px;
+  }
+}
+
+footer {
+  padding: 25px 0;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #222222;
+}
+
+footer p {
+  font-size: 12px;
+  margin: 0;
+}
+
+footer ul {
+  margin-bottom: 0;
+}
+
+footer ul li a {
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li a.active {
+  text-decoration: none;
+}
+
+canvas {
+  z-index: 5;
+  position: absolute;
+  top: 0; right: 0; bottom: 36%; left: 30%;
+  margin: auto;
+  max-width: 50%;
+  height: auto;
 }
