--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -806,3 +806,43 @@ section.features .feature-item i {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+/* "http://i64.tinypic.com/15x7m91.jpg" */
+/* "http://i65.tinypic.com/abml1k.jpg" */
+/* "http://i67.tinypic.com/34yzbqv.jpg"  */
+section.cta {
+  position: relative;
+  padding: 250px 0;
+  background-image: url("http://i65.tinypic.com/abml1k.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+
+section.cta .cta-content {
+  position: relative;
+  z-index: 1;
+}
+
+section.cta .cta-content h2 {
+  font-size: 50px;
+  max-width: 450px;
+  margin-top: 0;
+  margin-bottom: 25px;
+  color: white;
+}
+
+@media (min-width: 768px) {
+  section.cta .cta-content h2 {
+    font-size: 80px;
+  }
+}
+
+section.cta .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
