--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -828,13 +828,10 @@ section.features .feature-item i {
   -webkit-text-fill-color: transparent;
 }
 
-/* "http://i64.tinypic.com/15x7m91.jpg" */
-/* "http://i65.tinypic.com/abml1k.jpg" */
-/* "http://i67.tinypic.com/34yzbqv.jpg"  */
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-image: url("http://i65.tinypic.com/abml1k.jpg");
+  background-image: url("https://drive.google.com/file/d/1elDGT1ZeDDV7ThO76uqStX261ko-_Ycx/view?usp=sharing");
   background-position: center;
   background-size: cover;
 }
