fix imaged links

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -852,7 +852,7 @@ section.features .feature-item i {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-image: url("https://drive.google.com/file/d/1elDGT1ZeDDV7ThO76uqStX261ko-_Ycx/view?usp=sharing");
+  background-image: url("https://i.ibb.co/FKbwMLJ/lighted-dj-board-164745.jpg");
   background-position: center;
   background-size: cover;
 }
