--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -21,6 +21,11 @@ body {
   background-color: #2E2E2E;
 }
 
+#edit-popup {
+  /*dark mode */
+  background-color: #2E2E2E;
+}
+
 .dropdown {
     /* dark mode */
     color: #fff;
