--- a/src/styles/hypersonic.css
+++ b/src/styles/hypersonic.css
@@ -100,6 +100,11 @@ body {
   background-color: #000000;
 }
 
+#edit-popup {
+  /*dark mode */
+  background-color: #000000;
+}
+
 .dropdown {
     /* dark mode */
     color: #fff;
